--- a/package.json
+++ b/package.json
@@ -1,4 +1,12 @@
 {
   "name": "@actionshq/actions",
-  "version": "0.1.0"
+  "version": "0.1.0",
+  "type": "module",
+  "files": ["dist"],
+  "devDependencies": {
+    "@types/js-yaml": "^4.0.5",
+    "js-yaml": "^4.1.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.4"
+  }
 }
