fix!: rename trigger to triggers

--- a/actions/document.yaml
+++ b/actions/document.yaml
@@ -9,18 +9,18 @@ spec:
   - provider: Google
     name: Google Docs
     icon: https://www.google.com/s2/favicons?domain=docs.google.com&sz=32
-    trigger:
+    triggers:
       - type: LinkTrigger
         uri: https://docs.new
   - provider: Microsoft
     name: Microsoft Word
     icon: https://www.google.com/s2/favicons?domain=www.microsoft.com&sz=32
-    trigger:
+    triggers:
       - type: LinkTrigger
         uri: https://word.new
   - provider: Dropbox
     name: Dropbox Paper
     icon: https://www.google.com/s2/favicons?domain=www.dropbox.com&sz=32
-    trigger:
+    triggers:
       - type: LinkTrigger
         uri: https://paper.new
