--- a/actions/call.yaml
+++ b/actions/call.yaml
@@ -1,8 +1,11 @@
-# yaml-language-server: $schema=../schemas/action.json
+# yaml-language-server: $schema=../Action.schema.json
 apiVersion: make.new/v1alpha1
 kind: Action
 metadata:
   name: Call
 spec:
-  iconClass: fa-solid fa-phone
+  slug: call
+  icon:
+    type: FontAwesomeIcon
+    name: phone
   services: []
