--- a/actions/document.yaml
+++ b/actions/document.yaml
@@ -1,26 +1,35 @@
-# yaml-language-server: $schema=../schemas/action.json
+# yaml-language-server: $schema=../Action.schema.json
 apiVersion: make.new/v1alpha1
 kind: Action
 metadata:
   name: Document
 spec:
-  iconClass: fa-solid fa-file
+  slug: document
+  icon:
+    type: FontAwesomeIcon
+    name: file
   services:
   - provider: Google
     name: Google Docs
-    icon: https://www.google.com/s2/favicons?domain=docs.google.com&sz=32
+    icon:
+      type: Image
+      source: https://www.google.com/s2/favicons?domain=docs.google.com&sz=32
     triggers:
       - type: LinkTrigger
         uri: https://docs.new
   - provider: Microsoft
     name: Microsoft Word
-    icon: https://www.google.com/s2/favicons?domain=www.microsoft.com&sz=32
+    icon:
+      type: Image
+      source: https://www.google.com/s2/favicons?domain=www.microsoft.com&sz=32
     triggers:
       - type: LinkTrigger
         uri: https://word.new
   - provider: Dropbox
     name: Dropbox Paper
-    icon: https://www.google.com/s2/favicons?domain=www.dropbox.com&sz=32
+    icon:
+      type: Image
+      source: https://www.google.com/s2/favicons?domain=www.dropbox.com&sz=32
     triggers:
       - type: LinkTrigger
         uri: https://paper.new
