--- a/actions/event.yaml
+++ b/actions/event.yaml
@@ -1,8 +1,11 @@
-# yaml-language-server: $schema=../schemas/action.json
+# yaml-language-server: $schema=../Action.schema.json
 apiVersion: make.new/v1alpha1
 kind: Action
 metadata:
   name: Event
 spec:
-  iconClass: fa-solid fa-calendar
+  slug: event
+  icon:
+    type: FontAwesomeIcon
+    name: calendar
   services: []
