--- a/actions/task.yaml
+++ b/actions/task.yaml
@@ -1,8 +1,11 @@
-# yaml-language-server: $schema=../schemas/action.json
+# yaml-language-server: $schema=../Action.schema.json
 apiVersion: make.new/v1alpha1
 kind: Action
 metadata:
   name: Task
 spec:
-  iconClass: fa-solid fa-list-check
+  slug: task
+  icon:
+    type: FontAwesomeIcon
+    name: list-check
   services: []
