feat: add native call to call action

--- a/actions/call.yaml
+++ b/actions/call.yaml
@@ -8,4 +8,12 @@ spec:
   icon:
     type: FontAwesomeIcon
     name: phone
-  services: []
+  services:
+  - provider: Native
+    name: Native Call
+    icon:
+      type: FontAwesomeIcon
+      name: phone
+    triggers:
+      - type: LinkTrigger
+        uri: tel://
