--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "files": [
     "dist"
   ],
+  "types": "./dist/types.d.ts",
   "devDependencies": {
     "@types/js-yaml": "^4.0.5",
     "js-yaml": "^4.1.0",
+    "json-schema-to-typescript": "^11.0.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   }
