--- a/actions/call.yaml
+++ b/actions/call.yaml
@@ -17,3 +17,11 @@ spec:
     triggers:
       - type: LinkTrigger
         uri: tel://
+  - provider: PopTox
+    name: PopTox
+    icon:
+      type: Image
+      source: https://www.google.com/s2/favicons?domain=poptox.com&sz=32
+    triggers:
+      - type: LinkTrigger
+        uri: https://www.poptox.com
