--- a/actions/task.yaml
+++ b/actions/task.yaml
@@ -8,4 +8,20 @@ spec:
   icon:
     type: FontAwesomeIcon
     name: list-check
-  services: []
+  services:
+    - provider: Google
+      name: Google Tasks
+      icon:
+        type: Image
+        source: https://www.google.com/s2/favicons?domain=google.com&sz=32
+      triggers:
+        - type: LinkTrigger
+          uri: https://tasks.google.com/embed/?origin=https://calendar.google.com&fullWidth=1
+    - provider: Microsoft
+      name: Microsoft To Do
+      icon:
+        type: Image
+        source: https://www.google.com/s2/favicons?domain=microsoft.com&sz=32
+      triggers:
+        - type: LinkTrigger
+          uri: https://to-do.office.com/tasks
