--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
   ],
   "types": "./dist/types.d.ts",
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^6.2.1",
     "@types/js-yaml": "^4.0.5",
     "js-yaml": "^4.1.0",
     "json-schema-to-typescript": "^11.0.3",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "pwa-asset-generator": "^6.2.1"
   }
 }
